<resources>
    <string name="app_name">Vzyali</string>

    <!--ЗАГОЛОВКИ-->
    <string name="header_Vacancies_search">Поиск вакансий</string>
    <string name="header_Filters_setup">Настройки фильтрации</string>
    <string name="header_Jobs_selection">Выбор места работы</string>
    <string name="header_Country_selection">Выбор страны</string>
    <string name="header_Region_selection">Выбор региона</string>
    <string name="header_Industry_selection">Выбор отрасли</string>
    <string name="header_Vacancy">Вакансия</string>

    <!--ПОДСКАЗКИ-->
    <string name="hint_Enter_request">Введите запрос</string>
    <string name="hint_Enter_amount">Введите сумму</string>
    <string name="hint_Enter_region">Введите регион</string>
    <string name="hint_Enter_industry">Введите отрасль</string>

    <!--ПОДСКАЗКИ-->
    <string name="saveConfirmTitle">Вы хотите сохранить изменения?</string>
    <string name="saveChanges">Да</string>
    <string name="discardChanges">Нет</string>
    <string name="cancel">Отмена</string>


    <!--BOTTOM NAVIGATION-->
    <string name="navigation_Main">Главная</string>
    <string name="navigation_Favorite">Избранное</string>
    <string name="navigation_Team">Команда</string>

    <!--ОШИБКИ-->
    <string name="errors_check_connection">Нет интернета</string>
    <string name="errors_No_connection">Нет интернета</string>
    <string name="errors_Server">Ошибка сервера</string>
    <string name="errors_bad_request">Не удалось получить \nсписок вакансий</string>
    <string name="errors_Region">Такого региона нет</string>
    <string name="errors_Filter_list">Не удалось получить список</string>
    <string name="errors_not_found">Вакансия не найдена или удалена</string>
    <string name="errors_occured">Произошла ошибка:</string>

    <!--ФИЛЬТРЫ-->
    <string name="filter_Job">Место работы</string>
    <string name="filter_Industry">Отрасль</string>
    <string name="filter_Hide_without_salary">Не показывать без зарплаты</string>
    <string name="filter_Salary">Ожидаемая зарплата</string>
    <string name="filter_Country">Страна</string>
    <string name="filter_Region">Регион</string>
    <string name="filter_Location">Location</string>

    <!--КНОПКИ-->
    <string name="buttons_Select">Выбрать</string>
    <string name="buttons_Apply">Применить</string>
    <string name="buttons_Clear">Сбросить</string>

    <!--РЕЗУЛЬТАТ ПОИСКА-->
    <string name="results_not_found">Таких вакансий нет</string>
    <!--val vacanciesCountText = resources.getQuantityString(
   R.plurals.vacancies_count, vacanciesCount, vacanciesCount
   )-->
    <string name="results_Find">Найдено </string>
    <plurals name="vacancies_count">
        <item quantity="one">%d вакансия</item>       <!-- 1 вакансия -->
        <item quantity="few">%d вакансии</item>      <!-- 2, 3, 4 вакансии -->
        <item quantity="many">%d вакансий</item>    <!-- 5, 6, 7... вакансий -->
        <item quantity="other">%d вакансий</item>   <!-- 0, 11-19, 20+ вакансий -->
    </plurals>

    <!--Зарплата -->
    <string name="salary_from_to">От %1$s до %2$s %3$s</string>
    <string name="salary_from">От %1$s %2$s</string>
    <string name="salary_to">До %1$s %2$s</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_gross">до вычета налогов</string>
    <string name="salary_net">после вычета налогов</string>

    <!--Опыт -->
    <string name="expirienseFrom">от</string>
    <string name="expirienseTo">до</string>

    <!--График -->
    <string name="fullDay">Полный день</string>
    <string name="shift">Сменный график</string>
    <string name="flexible">Гибкий график</string>
    <string name="remote">Удалённая работа</string>
    <string name="flyInFlyOut">Вахтовый метод</string>

    <!--СООБЩЕНИЯ-->
    <string name="messages_Salary_not_set">Зарплата не указана</string>
    <string name="messages_Hidden_employer">Работодатель скрыт</string>
    <string name="messages_List_is_empty">Список пуст</string>

    <!--ВАКАНСИЯ-->
    <string name="vacancy_Experience">Требуемый опыт</string>
    <string name="vacancy_Description">Описание вакансии</string>
    <string name="vacancy_Skills">Ключевые навыки</string>

    <!--КОМАНДА-->
    <string name="team_Who_works">Над приложением работали</string>
    <string name="team_Ekaterina">Екатерина Языкова</string>
    <string name="team_Tatyana">Татьяна Швецова</string>
    <string name="team_Dimitrii">Дмитрий Бурмистров</string>
    <string name="team_Emil">Эмиль Алмаметов</string>

    <!--INTENTS-->
    <string name="intent_sharing_type">text/plain</string>

    <!--ССЫЛКИ-->
    <string name="api_link">https://api.hh.ru</string>

    <!--ТЕСТИРОВАНИЕ-->
    <string name="test_Vacancy_name_and_city">Тестовое имя вакансии, Город</string>

</resources>
