<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="ru.practicum.android.diploma.presentation.search.SearchFragment"
        android:label="@string/navigation_Main"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_main_to_navigation_vacancy"
            app:destination="@id/navigation_vacancy" />
        <action
            android:id="@+id/action_navigation_main_to_navigation_filters"
            app:destination="@id/navigation_filters" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="ru.practicum.android.diploma.presentation.favorites.FavoritesFragment"
        android:label="@string/navigation_Favorite"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_navigation_favorites_to_navigation_vacancy"
            app:destination="@id/navigation_vacancy" />
        <argument
            android:name="vacancyId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_team"
        android:name="ru.practicum.android.diploma.presentation.team.TeamFragment"
        android:label="@string/navigation_Team"
        tools:layout="@layout/fragment_team" />

    <fragment
        android:id="@+id/navigation_vacancy"
        android:name="ru.practicum.android.diploma.presentation.vacancy.VacancyFragment"
        android:label="@string/header_Vacancy"
        tools:layout="@layout/fragment_vacancy" />

    <fragment
        android:id="@+id/navigation_filters"
        android:name="ru.practicum.android.diploma.presentation.filters.FiltersFragment"
        android:label="@string/header_Filters_setup"
        tools:layout="@layout/fragment_filters" >
        <action
            android:id="@+id/action_navigation_filters_to_navigation_main"
            app:destination="@id/navigation_main" />
        <action
            android:id="@+id/action_navigation_filters_to_navigation_choose_industry"
            app:destination="@id/navigation_choose_industry" />
    </fragment>

    <fragment
        android:id="@+id/navigation_choose_industry"
        android:name="ru.practicum.android.diploma.presentation.filters.industry.ChooseIndustryFragment"
        android:label="@string/header_Industry_selection"
        tools:layout="@layout/fragment_choose_industry" >
    </fragment>

    <fragment
        android:id="@+id/navigation_choose_country"
        android:name="ru.practicum.android.diploma.presentation.filters.areachoice.CountryChoiceFragment"
        android:label="fragment_region_choice"
        tools:layout="@layout/fragment_region_choice" />

</navigation>
