<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.filters.FiltersFragment">

    <ImageButton
        android:id="@+id/bToSearch"
        android:layout_width="@dimen/icon_size_48"
        android:layout_height="@dimen/icon_size_48"
        android:layout_marginVertical="@dimen/margin_4"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_48"
        android:layout_marginVertical="@dimen/margin_4"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/header_Filters_setup"
        android:textColor="?attr/colorOnPrimary"
        style="@style/text_medium_22"
        app:layout_constraintBottom_toTopOf="@id/header_title"
        app:layout_constraintStart_toEndOf="@id/bToSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/work_place_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_4"
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/workPlace"
            style="@style/FilterStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/filter_Job">

            <AutoCompleteTextView
                android:id="@+id/work_place_text"
                style="@style/SearchEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/work_place_filter_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/leading_icon" />

        <ImageView
            android:id="@+id/clear_work_place_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_close"
            app:tint="?attr/colorOnPrimary" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/industry_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_4"
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/work_place_field">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/industry_input_layout"
            style="@style/FilterStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/filter_Industry">

            <AutoCompleteTextView
                android:id="@+id/industry_text"
                style="@style/SearchEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/industry_filter_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/leading_icon" />

        <ImageView
            android:id="@+id/clear_industry_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_close"
            app:tint="?attr/colorOnPrimary" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salary_expected_layout"
        style="@style/FilterFrameLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:focusableInTouchMode="true"
        android:hint="@string/filter_Salary"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:endIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/industry_field"
        app:placeholderText="@string/hint_Enter_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/salary_expected_input"
            style="@style/SalaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hide_without_salary"
        style="@style/FilterText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:layout_marginTop="@dimen/margin_24"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/text_size_16"
        android:text="@string/filter_Hide_without_salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salary_expected_layout" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="@dimen/margin_6"
        android:buttonTint="@color/blue"
        android:theme="@style/ToolbarRipple"
        app:layout_constraintBottom_toBottomOf="@id/hide_without_salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/hide_without_salary" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply_btn"
        style="@style/FilterBottomButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="@drawable/bt_round_drawable"
        android:text="@string/buttons_Apply"
        android:textColor="@color/white"
        android:visibility="gone"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintBottom_toTopOf="@id/cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_btn"
        style="@style/FilterBottomButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24"
        android:background="@android:color/transparent"
        android:stateListAnimator="@null"
        android:text="@string/buttons_Clear"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="apply_btn,cancel_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>
