<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <ImageButton
        android:id="@+id/bBack"
        android:layout_width="@dimen/icon_size_48"
        android:layout_height="@dimen/icon_size_48"
        android:layout_marginVertical="@dimen/margin_8"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/header_title"
        style="@style/text_medium_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_marginVertical="@dimen/margin_20"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/header_Jobs_selection"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toEndOf="@id/bBack"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bBack">

        <TextView
            android:id="@+id/bCountrssy"
            style="@style/text_regular_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingVertical="@dimen/margin_20"
            android:text="@string/filter_Country"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bChooseCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="@id/bCountry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bCountry"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/tvCountryWhenSelected"
            style="@style/text_regular_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingTop="@dimen/margin_12"
            android:text="@string/filter_Country"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tvCountryNameSelected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCountryNameSelected"
            style="@style/text_regular_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_12"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCountryWhenSelected"
            tools:text="Россия" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bCountry">

        <ImageButton
            android:id="@+id/bArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/tvRegionEmpty"
            style="@style/text_regular_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingVertical="@dimen/margin_20"
            android:text="@string/filter_Region"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRegionWhenSelected"
            style="@style/text_regular_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingTop="@dimen/margin_12"
            android:text="@string/filter_Region"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tvRegionNameSelected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRegionNameSelected"
            style="@style/text_regular_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_12"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegionWhenSelected"
            tools:text="Омск" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bSelect"
        style="@style/FilterBottomButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24"
        android:background="@drawable/bt_round_drawable"
        android:text="@string/buttons_Select"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
